--- a/mi pagina web/css/estilos.css
+++ b/mi pagina web/css/estilos.css
@@ -1,4 +1,5 @@
 
+
 .carafeliz {
     color: #00D8DD; 
 }
@@ -13,6 +14,10 @@ color: #000000;
     background-color: #00D8DD;
     color:#000000;
 }
+
+.navbar-collapse {
+    flex-grow:inherit
+}
 .active {
     background-color: #F8D710;
 }
@@ -26,6 +31,10 @@ color: #000000;
     width:0px;
 }
 
+.seccion2 {
+    background-color:  #EDEDED; display: block; ;
+    }
+
 footer {
-    background-color:  #EDEDED; 
+    background-color:  #ffffff; 
     }
