--- a/mi pagina web/css/estilos.css
+++ b/mi pagina web/css/estilos.css
@@ -25,10 +25,19 @@ color: #000000;
     flex-wrap: 0;
 }
 
+.frase h2  { margin-top: 200px; margin-bottom: 50px;
+}
 
-
+.frase h3  {  margin-bottom: 250px; text-align: right;
+}
 .container .container-fluid .container-lg .container-md .container-sm .container-xl .container-xxl {
     width:0px;
+}
+
+.piedeimagen p { text-align: center;
+}
+
+.piedeimagen hr { position: relative; margin-left: 10%;
 }
 
 .seccion2 {
