--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,100 +1,150 @@
-/* line 3, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
-.carafeliz {
-  color: #00D8DD;
+@font-face {
+  font-family: Montserrat-light;
+  src: url(../fonts/Montserrat-Light.ttf);
 }
 
-/* line 7, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+@font-face {
+  font-family: Montserrat-Medium;
+  src: url(../fonts/Montserrat-Medium.ttf);
+}
+
+@font-face {
+  font-family: Montserrat-ExtraBold;
+  src: url(../fonts/Montserrat-ExtraBold.ttf);
+}
+
+@font-face {
+  font-family: Manrope-ExtraBold;
+  src: url(../fonts/Manrope-ExtraBold.ttf);
+}
+
+@font-face {
+  font-family: Manrope-Medium;
+  src: url(../fonts/Manrope-Medium);
+}
+
+@font-face {
+  font-family: Manrope-Light;
+  src: url(../fonts/Manrope-Light);
+}
+
+/* line 37, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 h1 {
   color: #000000;
   font-size: 55px;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* line 10, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
-.navbar-light .navbar-nav .nav-link {
-  color: #000000;
+/* line 40, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+h2 {
+  font-family: Montserrat-Light,sans-serif;
 }
 
-/* line 13, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 45, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.carafeliz {
+  color: #00D8DD;
+}
+
+/* line 50, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.navbar-light .navbar-nav .nav-link {
+  color: #000000;
+  font-family: Montserrat-light, sans-serif;
+}
+
+/* line 53, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .navbar-light .navbar-nav .nav-link:hover {
   background-color: #00D8DD;
   color: #000000;
 }
 
-/* line 18, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 58, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .navbar-collapse {
   flex-grow: inherit;
 }
 
-/* line 21, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 61, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .active {
   background-color: #F8D710;
+  font-family: Montserrat-ExtraBold, sans-serif;
 }
 
-/* line 24, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 66, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .navbar-collapse {
   flex-wrap: 0;
 }
 
-/* line 28, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 70, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .frase h2 {
   margin-top: 200px;
   margin-bottom: 50px;
 }
 
-/* line 31, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 73, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .frase h3 {
   margin-bottom: 250px;
   text-align: right;
+  font-family: Manrope-Regular, sans-serif;
+  font-size: 18px;
 }
 
-/* line 33, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 76, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .container .container-fluid .container-lg .container-md .container-sm .container-xl .container-xxl {
   width: 0px;
 }
 
-/* line 37, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 80, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.piedeimagen p {
+  color: #00D8DD;
+  font-family: Manrope-ExtraBold, sans-serif;
+}
+
+/* line 84, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.sobremi {
+  color: #EDEDED;
+}
+
+/* line 88, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .text-center img {
   filter: grayscale(100);
   transition: all .3s;
   border-radius: 10px;
 }
 
-/* line 43, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 94, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .text-center img:hover {
   filter: grayscale(0);
 }
 
-/* line 47, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 98, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .piedeimagen p {
   text-align: center;
 }
 
-/* line 50, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 101, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .piedeimagen hr {
   position: relative;
   margin-left: 10%;
 }
 
-/* line 53, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 104, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .btn-primary {
   background-color: #EDEDED;
   border-color: inherit;
 }
 
-/* line 56, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 107, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .btn-primary :hover {
   background-color: #00D8DD;
   border-color: #00D8DD;
 }
 
-/* line 61, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 112, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .seccion2 {
   background-color: #EDEDED;
   display: block;
 }
 
-/* line 65, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 116, ../../../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 footer {
   background-color: #ffffff;
 }
