--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,14 +1,54 @@
+@font-face {
+    font-family:Montserrat-light ;
+    src: url(../fonts/Montserrat-Light.ttf);
+}
+
+@font-face
+{
+    font-family:Montserrat-Medium ;
+    src: url(../fonts/Montserrat-Medium.ttf);
+}
+
+@font-face
+{
+    font-family:Montserrat-ExtraBold ;
+    src: url(../fonts/Montserrat-ExtraBold.ttf);
+}
+
+@font-face
+{
+    font-family:Manrope-ExtraBold;
+    src: url(../fonts/Manrope-ExtraBold.ttf);
+}
+
+@font-face
+{
+    font-family:Manrope-Medium;
+    src: url(../fonts/Manrope-Medium);
+}
+
+@font-face
+{
+    font-family:Manrope-Light;
+    src: url(../fonts/Manrope-Light);
+}
+
+
+h1 {
+    color: #000000; font-size:55px; font-family:'Montserrat', sans-serif;
+}
+h2{
+    font-family: Montserrat-Light,sans-serif
+}
 
 
 .carafeliz {
     color: #00D8DD; 
 }
 
-h1 {
-    color: #000000; font-size:55px; font-family:'Montserrat', sans-serif;
-}
+
 .navbar-light .navbar-nav .nav-link {
-color: #000000;
+color: #000000; font-family: Montserrat-light, sans-serif;
 }
 .navbar-light .navbar-nav .nav-link:hover {
     background-color: #00D8DD;
@@ -19,8 +59,10 @@ color: #000000;
     flex-grow:inherit
 }
 .active {
-    background-color: #F8D710;
+    background-color: #F8D710; font-family: Montserrat-ExtraBold, sans-serif
 }
+
+
 .navbar-collapse {
     flex-wrap: 0;
 }
@@ -28,11 +70,20 @@ color: #000000;
 .frase h2  { margin-top: 200px; margin-bottom: 50px;
 }
 
-.frase h3  {  margin-bottom: 250px; text-align: right;
+.frase h3  {  margin-bottom: 250px; text-align: right; font-family: Manrope-Regular, sans-serif;
+    font-size: 18px;
 }
 .container .container-fluid .container-lg .container-md .container-sm .container-xl .container-xxl {
     width:0px;
 }
+
+.piedeimagen p {
+    color:#00D8DD; font-family: Manrope-ExtraBold, sans-serif; 
+}
+
+.sobremi  { font
+}
+
 
 .text-center img {
     filter: grayscale(100);
