--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -33,19 +33,28 @@
     src: url(../fonts/Manrope-Light);
 }
 
+.container { max-width: 1920px; padding-left:5%; padding-right: 5%;
+    
+}
 
 h1 {
-    color: #000000; font-size:55px; font-family:'Montserrat', sans-serif;
+    color: #000000; font-size:55px; font-family: Montserrat-ExtraBold, sans-serif;
 }
 h2{
-    font-family: Montserrat-Light,sans-serif
+    font-family: Montserrat-Light,sans-serif;
 }
 
-
-.carafeliz {
-    color: #00D8DD; 
+h3{
+    font-family: Manrope-Regular, sans-serif; font-size: 14pt;
 }
 
+a {
+    font-family:Manrope-ExtraBold, sans-serif; color: #00D8DD; text-decoration: none;
+}
+
+a:hover {
+    color:#F8D710;
+}
 
 .navbar-light .navbar-nav .nav-link {
 color: #000000; font-family: Montserrat-light, sans-serif;
@@ -67,10 +76,13 @@ color: #000000; font-family: Montserrat-light, sans-serif;
     flex-wrap: 0;
 }
 
+main { margin-top: 300px;
+}
+
 .frase h2  { margin-top: 200px; margin-bottom: 50px;
 }
 
-.frase h3  {  margin-bottom: 250px; text-align: right; font-family: Manrope-Regular, sans-serif;
+.frase h3  {  margin-bottom: 300px; text-align: right; font-family: Manrope-Regular, sans-serif;
     font-size: 18px;
 }
 .container .container-fluid .container-lg .container-md .container-sm .container-xl .container-xxl {
@@ -78,12 +90,21 @@ color: #000000; font-family: Montserrat-light, sans-serif;
 }
 
 .piedeimagen p {
-    color:#00D8DD; font-family: Manrope-ExtraBold, sans-serif; 
+    color:#00D8DD; font-family: Manrope-ExtraBold, sans-serif; letter-spacing: 3px;
+}
+.piedeimagen hr {  
 }
 
-.sobremi  { font
+.sobremi  { color: #EDEDED; font-family: Montserrat-ExtraBold, sans-serif ; font-size: 120px;
 }
 
+.row { justify-content: space-between; padding-top: 20px;
+}
+
+.columna1 { padding-top: 80px; justify-content: space-between;}
+
+.columna1 h3 { text-align: justify
+}
 
 .text-center img {
     filter: grayscale(100);
@@ -108,11 +129,6 @@ color: #000000; font-family: Montserrat-light, sans-serif;
 }
 
 
-
-.seccion2 {
-    background-color:  #EDEDED; display: block; ;
-    }
-
 footer {
-    background-color:  #ffffff; 
+    background-color:#EDEDED; 
     }
