--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,77 +1,93 @@
 @font-face {
-    font-family:Montserrat-light ;
+    font-family: Montserrat-light;
     src: url(../fonts/Montserrat-Light.ttf);
 }
 
-@font-face
-{
-    font-family:Montserrat-Medium ;
+@font-face {
+    font-family: Montserrat-Medium;
     src: url(../fonts/Montserrat-Medium.ttf);
 }
 
-@font-face
-{
-    font-family:Montserrat-ExtraBold ;
+@font-face {
+    font-family: Montserrat-ExtraBold;
     src: url(../fonts/Montserrat-ExtraBold.ttf);
 }
 
-@font-face
-{
-    font-family:Manrope-ExtraBold;
+@font-face {
+    font-family: Manrope-ExtraBold;
     src: url(../fonts/Manrope-ExtraBold.ttf);
 }
 
-@font-face
-{
-    font-family:Manrope-Medium;
+@font-face {
+    font-family: Manrope-Medium;
     src: url(../fonts/Manrope-Medium);
 }
 
-@font-face
-{
-    font-family:Manrope-Light;
+@font-face {
+    font-family: Manrope-Light;
     src: url(../fonts/Manrope-Light);
 }
 
-.container { max-width: 1920px; padding-left:2%; padding-right: 2%;
-    
+.container {
+    max-width: 1920px;
+    padding-left: 2%;
+    padding-right: 2%;
+
 }
 
 h1 {
-    color: #000000; font-size:55px; font-family: Montserrat-ExtraBold, sans-serif;
-}
-h2{
-    font-family: Montserrat-Light,sans-serif;
+    color: #000000;
+    font-size: 55px;
+    font-family: Montserrat-ExtraBold, sans-serif;
 }
 
-h3{
-    font-family: Manrope-Regular, sans-serif; font-size: 14pt;
+h2 {
+    font-family: Montserrat-Light, sans-serif;
+}
+
+h3 {
+    font-family: Manrope-Regular, sans-serif;
+    font-size: 14pt;
+}
+
+strong { color: #00D8DD; font-family: Montserrat-ExtraBold, sans-serif ;
+   
 }
 
 a {
-    font-family:Manrope-ExtraBold, sans-serif; color: #00D8DD; text-decoration: none;
+    font-family: Manrope-ExtraBold, sans-serif;
+    color: #00D8DD;
+    text-decoration: none;
 }
 
 a:hover {
-    color:#F8D710;
+    color: #F8D710;
 }
 
 .navbar {
-    padding-top: 0%; padding-bottom: 0%;
+    padding-top: 0%;
+    padding-bottom: 0%;
 }
+
 .navbar-light .navbar-nav .nav-link {
-color: #000000; font-family: Montserrat-light, sans-serif; 
+    color: #0e0e0e;
+    font-family: Montserrat-Medium, sans-serif;
+    letter-spacing: 1px;
+    margin-left: 10px;
 }
+
 .navbar-light .navbar-nav .nav-link:hover {
-    background-color: #00D8DD;
-    color:#000000;
+    font-family: Montserrat-ExtraBold, sans-serif;
+    color: #aaaaaa;
 }
 
 .navbar-collapse {
-    flex-grow:inherit
+    flex-grow: inherit
 }
+
 .active {
-    background-color: #F8D710; font-family: Montserrat-ExtraBold, sans-serif
+    background-color: #F8D710;
+    font-family: Montserrat-ExtraBold, sans-serif
 }
 
 
@@ -79,53 +95,78 @@ color: #000000; font-family: Montserrat-light, sans-serif;
     flex-wrap: 0;
 }
 
-main { margin-top: 380px;
+main {
+    margin-top: 380px;
 }
 
-.encabezado .texto { margin-top: 0; margin-bottom: 50px; 
+.encabezado .texto {
+    margin-top: 0;
+    margin-bottom: 50px;
 }
 
-.frase h2  { margin-top: 200px; margin-bottom: 50px;
+.frase h2 {
+    margin-top: 200px;
+    margin-bottom: 50px;
 }
 
-.frase h3  {  margin-bottom: 300px; text-align: right; font-family: Manrope-Regular, sans-serif;
+.frase h3 {
+    margin-bottom: 300px;
+    text-align: right;
+    font-family: Manrope-Regular, sans-serif;
     font-size: 18px;
 }
+
 .container .container-fluid .container-lg .container-md .container-sm .container-xl .container-xxl {
-    width:0px;
+    width: 0px;
 }
 
 .piedeimagen p {
-    color:#00D8DD; font-family: Manrope-ExtraBold, sans-serif; letter-spacing: 3px; 
+    color: #00D8DD;
+    font-family: Manrope-ExtraBold, sans-serif;
+    letter-spacing: 3px;
 }
 
-hr {  
+hr {}
+
+.sobremi {
+    margin-top: 100px;
 }
 
- .sobremi { margin-top: 100px;
+
+
+.row {
+    justify-content: space-between;
+    padding-top: 20px;
+    flex-grow: inherit;
 }
 
-
-
-.row { justify-content: space-between; padding-top: 20px; flex-grow: inherit;
+.columna1 {
+    padding-top: 80px;
+    justify-content: space-between;
 }
 
-.columna1 { padding-top: 80px; justify-content: space-between;}
-
-.columna1 h3 { text-align: justify
+.columna1 h3 {
+    text-align: justify
 }
+
 .img-fluid {
     max-width: 100%;
-    height:inherit;
+    height: inherit;
 }
 
-.img-fluid #erika {  flex-shrink:0 ;
+.img-fluid #erika {
+    flex-shrink: 0;
 }
 
-div .row { --bs-gutter-x:none ;
+div .row {
+    --bs-gutter-x: none;
 }
 
-.col img { margin:5px ; flex-grow: 0; flex-shrink: 0; margin-top: 50px;
+.col img {
+    margin: 5px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-top: 50px;
     filter: grayscale(100) blur(0px);
     transition: all .3s;
     border-radius: 10px;
@@ -149,33 +190,112 @@ div .row { --bs-gutter-x:none ;
 
 .text-center img:hover {
     filter: grayscale(0);
-     transform: scale(1.1);
+    transform: scale(1.1);
     z-index: 2;
     cursor: pointer;
 }
 
 
-.text-center {  margin-top: 80px; margin-bottom: 50px;
+.text-center {
+    margin-top: 80px;
+    margin-bottom: 50px;
 }
 
 
-.encabezado {  margin-top: 0; 
+.encabezado {
+    margin-top: 0;
 }
 
-.piedeimagen p { text-align: center; 
-}
-.fondo { max-width: 1920px;}
-
-.piedeimagen hr { position: relative; margin-left:10%; margin-right: 10%;
+.piedeimagen p {
+    text-align: center;
 }
 
-.btn-primary { background-color:#EDEDED ; border-color: inherit
+.fondo {
+    max-width: 1920px;
 }
 
-.btn-primary :hover { background-color:#00D8DD ; border-color: #00D8DD;
+.text-center p {
+    margin-top: 250px;
+    margin-bottom: 0px;
 }
 
+form {
+    margin-top: 50px;
+    margin-bottom: 250px;
+    margin-left: 15%;
+    margin-right: 15%;
+    max-width: 600px;
+}
+
+.col-xxl-4 {
+    width: auto;
+}
+
+input {
+    margin-bottom: 10px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #00D8DD;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.form-control:focus {
+    color: #9b9b9b;
+    background-color: #fff;
+    border-color: #00D8DD;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(253, 254, 255, 0.25);
+}
+
+textarea {
+    width: 100%;
+    background-color: #ffffff;
+    border-color: #ced4da;
+    border-image: initial;
+    padding: 2px;
+}
+
+textarea:focus-visible {
+    outline: -webkit-focus-ring-color auto 1px;
+    outline-color: #00D8DD;
+
+}
+
+.piedeimagen hr {
+    position: relative;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.btn-primary {
+    background-color: #b4b4b4;
+    border-color: inherit
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #00D8DD;
+    border-color: #00D8DD;
+}
+
+.redes {
+    justify-content: space-between;
+}
 
 footer {
-    background-color:#EDEDED; 
-    }
+    background-color: #EDEDED;
+}
