--- a/css/estilos.css
+++ b/css/estilos.css
@@ -173,17 +173,131 @@ main {
   height: inherit;
 }
 
-/* line 157, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 156, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.titulo {
+  margin-top: 100px;
+}
+
+/* line 159, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.wrapper {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  width: 90%;
+  justify-content: space-around;
+}
+
+/* line 167, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card {
+  margin: 10px;
+  width: 100%;
+  height: 360px;
+  border-radius: 5px;
+  padding: 1.5rem;
+  background: none;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  transition: 0.4s ease-out;
+  box-shadow: 0px 2px 5px rgba(151, 151, 151, 0.5);
+}
+
+/* line 180, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card:hover {
+  transform: translateY(20px);
+}
+
+/* line 183, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card:hover:before {
+  opacity: 1;
+}
+
+/* line 186, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card:hover .info {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+/* line 190, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+  transition: 0.5s;
+  opacity: 0;
+}
+
+/* line 204, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 5px;
+}
+
+/* line 214, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card .info {
+  position: relative;
+  z-index: 3;
+  color: white;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: 0.5s;
+}
+
+/* line 222, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card .info h1 {
+  margin: 0px;
+}
+
+/* line 225, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card .info p h2 {
+  letter-spacing: 1px;
+  font-size: 5px;
+  margin-top: 8px;
+}
+
+/* line 230, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card .info button {
+  padding: 0.6rem;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+  background: white;
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.4s ease;
+}
+
+/* line 241, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+.card .info button:hover {
+  background: #00D8DD;
+  color: white;
+}
+
+/* line 246, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .img-fluid #erika {
   flex-shrink: 0;
 }
 
-/* line 161, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 250, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 div .row {
   --bs-gutter-x: none;
 }
 
-/* line 165, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 254, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .col img {
   margin: 5px;
   flex-grow: 0;
@@ -194,7 +308,7 @@ div .row {
   border-radius: 10px;
 }
 
-/* line 176, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 265, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .col img:hover {
   filter: grayscale(0);
   transform: scale(1.1);
@@ -202,14 +316,14 @@ div .row {
   cursor: pointer;
 }
 
-/* line 184, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 273, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .text-center img {
   filter: grayscale(100) blur(1px);
   transition: all .3s;
   border-radius: 10px;
 }
 
-/* line 191, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 280, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .text-center img:hover {
   filter: grayscale(0);
   transform: scale(1.1);
@@ -217,34 +331,34 @@ div .row {
   cursor: pointer;
 }
 
-/* line 199, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 288, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .text-center {
   margin-top: 80px;
   margin-bottom: 50px;
 }
 
-/* line 205, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 294, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .encabezado {
   margin-top: 0;
 }
 
-/* line 209, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 298, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .piedeimagen p {
   text-align: center;
 }
 
-/* line 213, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 302, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .fondo {
   max-width: 1920px;
 }
 
-/* line 217, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 306, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .text-center p {
   margin-top: 250px;
   margin-bottom: 0px;
 }
 
-/* line 222, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 311, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 form {
   margin-top: 50px;
   margin-bottom: 250px;
@@ -253,17 +367,17 @@ form {
   max-width: 600px;
 }
 
-/* line 230, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 319, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .col-xxl-4 {
   width: auto;
 }
 
-/* line 234, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 323, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 input {
   margin-bottom: 10px;
 }
 
-/* line 238, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 327, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .form-control {
   display: block;
   width: 100%;
@@ -282,7 +396,7 @@ input {
   transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
-/* line 256, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 345, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .form-control:focus {
   color: #9b9b9b;
   background-color: #fff;
@@ -291,7 +405,7 @@ input {
   box-shadow: 0 0 0 0.25rem rgba(253, 254, 255, 0.25);
 }
 
-/* line 264, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 353, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 textarea {
   width: 100%;
   background-color: #ffffff;
@@ -300,38 +414,38 @@ textarea {
   padding: 2px;
 }
 
-/* line 272, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 361, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 textarea:focus-visible {
   outline: -webkit-focus-ring-color auto 1px;
   outline-color: #00D8DD;
 }
 
-/* line 278, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 367, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .piedeimagen hr {
   position: relative;
   margin-left: 10%;
   margin-right: 10%;
 }
 
-/* line 284, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 373, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .btn-primary {
   background-color: #b4b4b4;
   border-color: inherit;
 }
 
-/* line 289, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 378, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .btn-primary:hover {
   color: #fff;
   background-color: #00D8DD;
   border-color: #00D8DD;
 }
 
-/* line 295, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 384, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 .redes {
   justify-content: space-between;
 }
 
-/* line 299, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
+/* line 388, ../../../OneDrive/Escritorio/mi pagina web1/sass/estilos.scss */
 footer {
   background-color: #EDEDED;
 }
