--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -153,6 +153,95 @@ hr {}
     max-width: 100%;
     height: inherit;
 }
+ .titulo{ margin-top: 100px;
+}
+
+.wrapper {
+    margin-top: 50px; margin-bottom: 50px;
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+
+  }
+  
+  .card {
+    margin: 10px;
+    width: 100%;
+    height: 360px;
+    border-radius: 5px;
+    padding: 1.5rem;
+    background: none;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    transition: 0.4s ease-out;
+    box-shadow: 0px 2px 5px rgba(151, 151, 151, 0.5);
+  }
+  .card:hover {
+    transform: translateY(20px);
+  }
+  .card:hover:before {
+    opacity: 1;
+  }
+  .card:hover .info {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  .card:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 2;
+    transition: 0.5s;
+    opacity: 0;
+  }
+  .card img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 5px;
+  }
+  .card .info {
+    position: relative;
+    z-index: 3;
+    color: white;
+    opacity: 0;
+    transform: translateY(30px);
+    transition: 0.5s;
+  }
+  .card .info h1 {
+    margin: 0px;
+  }
+  .card .info p h2 {
+    letter-spacing: 1px;
+    font-size: 5px;
+    margin-top: 8px;
+  }
+  .card .info button {
+    padding: 0.6rem;
+    outline: none;
+    border: none;
+    border-radius: 3px;
+    background: white;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.4s ease;
+  }
+  .card .info button:hover {
+    background:#00D8DD;
+    color: white;
+  }
 
 .img-fluid #erika {
     flex-shrink: 0;
