--- a/css/estilos.css
+++ b/css/estilos.css
@@ -197,7 +197,7 @@ main {
   background: none;
   position: relative;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   transition: 0.4s ease-out;
   box-shadow: 0px 2px 5px rgba(151, 151, 151, 0.5);
 }
