--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -173,7 +173,7 @@ hr {}
     background: none;
     position: relative;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     transition: 0.4s ease-out;
     box-shadow: 0px 2px 5px rgba(151, 151, 151, 0.5);
   }
