--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -50,8 +50,10 @@ h3 {
     font-size: 14pt;
 }
 
-strong { color: #00D8DD; font-family: Montserrat-ExtraBold, sans-serif ;
-   
+strong {
+    color: #00D8DD;
+    font-family: Montserrat-ExtraBold, sans-serif;
+
 }
 
 a {
@@ -126,7 +128,6 @@ main {
     letter-spacing: 3px;
 }
 
-hr {}
 
 .sobremi {
     margin-top: 100px;
@@ -153,18 +154,21 @@ hr {}
     max-width: 100%;
     height: inherit;
 }
- .titulo{ margin-top: 100px;
+
+.titulo {
+    margin-top: 100px;
 }
 
 .wrapper {
-    margin-top: 50px; margin-bottom: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     display: flex;
     width: 90%;
     justify-content: space-around;
 
-  }
-  
-  .card {
+}
+
+.card {
     margin: 10px;
     width: 100%;
     height: 360px;
@@ -176,18 +180,22 @@ hr {}
     align-items: center;
     transition: 0.4s ease-out;
     box-shadow: 0px 2px 5px rgba(151, 151, 151, 0.5);
-  }
-  .card:hover {
+}
+
+.card:hover {
     transform: translateY(20px);
-  }
-  .card:hover:before {
+}
+
+.card:hover:before {
     opacity: 1;
-  }
-  .card:hover .info {
+}
+
+.card:hover .info {
     opacity: 1;
     transform: translateY(0px);
-  }
-  .card:before {
+}
+
+.card:before {
     content: "";
     position: absolute;
     top: 0;
@@ -200,34 +208,39 @@ hr {}
     z-index: 2;
     transition: 0.5s;
     opacity: 0;
-  }
-  .card img {
+}
+
+.card img {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
     border-radius: 5px;
-  }
-  .card .info {
+}
+
+.card .info {
     position: relative;
     z-index: 3;
     color: white;
     opacity: 0;
     transform: translateY(30px);
     transition: 0.5s;
-  }
-  .card .info h1 {
+}
+
+.card .info h1 {
     margin: 0px;
-  }
-  .card .info p h2 {
+}
+
+.card .info p h2 {
     letter-spacing: 1px;
     font-size: 5px;
     margin-top: 8px;
-  }
-  .card .info button {
+}
+
+.card .info button {
     padding: 0.6rem;
     outline: none;
     border: none;
@@ -237,11 +250,12 @@ hr {}
     font-weight: bold;
     cursor: pointer;
     transition: 0.4s ease;
-  }
-  .card .info button:hover {
-    background:#00D8DD;
+}
+
+.card .info button:hover {
+    background: #00D8DD;
     color: white;
-  }
+}
 
 .img-fluid #erika {
     flex-shrink: 0;
